<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ajustes.NuevoProducto">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="360dp"
        android:layout_height="420dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="145dp"
            android:layout_height="420dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_nombre"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_marca"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_medicion"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_unidadPorPack"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_precio_compra"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_Precio"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_cantidadMax"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/nuevoProducto_cantidadActual"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nuevo_producto_nombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nuevoProducto_nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/nuevo_producto_marca"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nuevoProducto_marca"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nuevo_producto_tamano"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/nuevoProducto_medicion"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/nuevo_producto_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/nuevo_producto_pack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nuevoProducto_unidadPorPack"
                android:inputType="number" />

            <EditText
                android:id="@+id/nuevo_producto_precio_compra"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nuevoProducto_precio_compra"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/nuevo_producto_precio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nuevoProducto_Precio"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/nuevo_producto_cantidad_maxima"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/nuevoProducto_cantidadMax"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nuevoProducto_cantidadActualPack" />

                <EditText
                    android:id="@+id/nuevo_producto_cantidad_actual_pack"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="0"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nuevoProducto_cantidadActualUnit" />

                <EditText
                    android:id="@+id/nuevo_producto_actual_unit"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button11"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="12dp"
        android:onClick="moveToAjustes"
        android:text="@string/productoVenta_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button13"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:onClick="Registrar"
        android:text="@string/productoVenta_aceptar"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>