<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ajustes.CambiarDatos">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="348dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34">

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="280dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_nombre"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_ubicacion"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_dueno"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_telefono"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_ruc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/datos_tienda_categoria"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cambiar_datos_nombre_tienda"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cambiar_datos_ubicacion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cambiar_datos_dueno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cambiar_datos_telefono"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <EditText
                android:id="@+id/cambiar_datos_ruc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <EditText
                android:id="@+id/cambiar_datos_categoria"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/cambiar_datos_tienda_titulo"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="48dp"
        android:onClick="Guardar"
        android:text="@string/button_aceptar"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="48dp"
        android:onClick="cancelarBoleta"
        android:text="@string/button_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>