<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_50"
    tools:context=".ajustes.Datos_Tienda">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="550dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41">

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="514dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_nombre"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_ubicacion"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_dueno"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_telefono"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_ruc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/datos_tienda_categoria"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/datos_tienda_nombre_tienda"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/datos_tienda_ubicacion"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/datos_tienda_dueno"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/datos_tienda_telefono"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/datos_tienda_ruc"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/datos_tienda_categoria"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/datos_tienda"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>